--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <div class="content" id="overlay">
         <div class="col-xd-3">
-            <div class="div-1"> Button 1</div>
-            <div class="div-1">Button 2</div>
-            <div class="div-1">Button 3</div>
-            <div class="div-1">Button 4</div>
-            <div class="div-1">Button 5</div>
+            <button class="div-1"> Chương trình đào tạo</button>
+            <button class="div-1"> Đăng ký môn học</button>
+            <button class="div-1"> Xem học phí</button>
+            <button class="div-1"> Hóa đơn điện tử</button>
+            <button class="div-1"> Xem lịch thi</button>
         </div>
         <div class="form-student" id="form-student">
             <h3 class="h3-add">Thông tin sinh viên</h3>
